# R.O.V.R

./: LICENSE  README.md
roboarm/Roboarm 3D parts/: Assembled Robot Arm.SLDASM  Base of the robot arm.3MF  Bottom rotation plate on the robot arm.3MF  First arm part.3MF  Robot gripper.3MF  Second arm part.3MF  Servo model.3MF  Third arm part.3MF
roboarm/Roboarm model for IK/: ROBOTARM BLENDER WITH BONES THIS TIME.fbx  ROBOTARM BLENDER.blend
software/application_client_unity/Scripts/Connection/: WebConnector.cs  WebRTCHolder.cs  WebRtcConnector.cs  WebSocketTypesRegistry.cs
software/application_client_unity/Scripts/Data/: Container.cs  HeadsetMove.cs  LocomotionData.cs  RoboarmLocation.cs
software/raspi_machine_client/: .gitignore  requirements.txt
software/raspi_machine_client/config/: arm.yaml  arm_limits.json  camera.yaml  camera_limits.json  chassis.yaml  webrtc_bridge.yaml
software/raspi_machine_client/scripts/: calibrate_arm.py  dev_env.sh  recalibrate_joint.py  run_full_stack.sh  test_arm_positions.py  test_camera_positions.py  test_drive_keyboard.py
software/raspi_machine_client/src/rovr_bringup/: package.xml  setup.cfg  setup.py
software/raspi_machine_client/src/rovr_bringup/launch/: bringup.launch.py
software/raspi_machine_client/src/rovr_bringup/resource/: rovr_bringup
software/raspi_machine_client/src/rovr_bringup/rovr_bringup/: __init__.py
software/raspi_machine_client/src/rovr_camera/: package.xml  setup.cfg  setup.py
software/raspi_machine_client/src/rovr_camera/resource/: rovr_camera
software/raspi_machine_client/src/rovr_camera/rovr_camera/: __init__.py  control.py  node.py
software/raspi_machine_client/src/rovr_chassis/: package.xml  setup.cfg  setup.py
software/raspi_machine_client/src/rovr_chassis/resource/: rovr_chassis
software/raspi_machine_client/src/rovr_chassis/rovr_chassis/: __init__.py  control.py  node.py
software/raspi_machine_client/src/rovr_common/: package.xml  setup.cfg  setup.py
software/raspi_machine_client/src/rovr_common/resource/: rovr_common
software/raspi_machine_client/src/rovr_common/rovr_common/: __init__.py  clamp.py  command_models.py  fake_gpio.py  fake_servo_bus.py  json_codec.py  servo_calibration.py  smoothing.py  st3215_bus.py  watchdog.py
software/raspi_machine_client/tests/: conftest.py  test_arm_core.py  test_camera_core.py  test_chassis_core.py  test_json_codec.py  test_servo_calibration.py
software/websocket_server/: requirements.txt
software/websocket_server/src/: config_resolver.py  connector.py  constants.py  main.py  settings.yaml
(+65 files in other folders)
