<?xml version="1.0"?>
<package format="3">
  <name>rovr_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and bringup orchestration for the ROVR robot.</description>
  <maintainer email="rovr@example.com">rovr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>rovr_arm</exec_depend>
  <exec_depend>rovr_camera</exec_depend>
  <exec_depend>rovr_chassis</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
