<?xml version="1.0"?>
<package format="3">
  <name>rovr_camera</name>
  <version>0.1.0</version>
  <description>Camera PTZ controller node for the ROVR robot.</description>
  <maintainer email="rovr@example.com">rovr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rovr_interfaces</depend>

  <exec_depend>rovr_common</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
