<?xml version="1.0"?>
<package format="3">
  <name>rovr_chassis</name>
  <version>0.1.0</version>
  <description>Chassis controller node for the ROVR robot.</description>
  <maintainer email="rovr@example.com">rovr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>rovr_common</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
