<?xml version="1.0"?>
<package format="3">
  <name>rovr_common</name>
  <version>0.1.0</version>
  <description>Shared utilities and mock backends for the ROVR robot stack.</description>
  <maintainer email="rovr@example.com">rovr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
